# pdxindoorsoccer-ical

./: .gitignore  Cargo.toml  TODO  flake.nix  rustfmt.toml  schedule.url
src/: main.rs
test/div3b/: expected.ical  input.txt  url_input.txt
test/fall/: expected.ical  input.txt  url_input.txt
test/winter/: expected.ical  input.txt  url_input.txt
