[package]
name = "pdxindoorsoccer-ical"
version = "0.1.0"
authors = ["David Orchard <if_coding@fastmail.com>"]
edition = "2021"

[dependencies]

# CLI
structopt = { version = "0.3.0", features = [ "paw" ] }
paw = "1.0"

# Error handling
anyhow = "1.0.28"
color-backtrace = "0.5.1"

# Calendar
icalendar = "0.10.0"
chrono = "0.4.6"
chrono-tz = "0.6.0"

# Networking
reqwest = "0.11.4"
tokio = { version = "1.12.0", features = [ "rt-multi-thread" ] }

# Parsing
regex = "1.1.0"
lazy_static = "1.2.0"
heck = "0.3.1"
encoding_rs = "0.8.16"
caseless = "0.2.1"

[patch.crates-io]
#icalendar = { git = "https://github.com/dlo9/icalendar-rs" }
